--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-outside-click-handler": "^1.3.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
