--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-outside-click-handler": "^1.3.1",
+    "@types/react-speech-recognition": "^3.9.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.2",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.9.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
