--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-speech-recognition": "^3.9.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-outside-click-handler": "^1.3.0",
