--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-outside-click-handler": "^1.3.1",
     "@types/react-speech-recognition": "^3.9.0",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-outside-click-handler": "^1.3.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.9.1",
