--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.29.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-outside-click-handler": "^1.3.0",
